# Lumo_reports

./: .env  .gitignore  data_migrate.py  pyproject.toml
UTILITIES_TO_REMOVE/: Dates.py  Paths.py  bloombergfields.py  database.py
UTILITIES_TO_REMOVE/NavStatsClass/: NavStats.py  README.md  config.py  outputs.py  test.py  utils.py  validations.py
UTILITIES_TO_REMOVE/RiskData/: Portfolio.py  RiskData.py  research_data.py  settings.py
UTILITIES_TO_REMOVE/c4api/: Additional_DataSources.py  C4API.py  C4API_Utilities.py  CalculationEngine.py
models/: base.py
sample_datasets/: credit_beta_data.xlsx  esg_report_data.xlsx  semler_report_data.xlsx
sample_reports/: Attribution - EUHYDEN - 2024-12-05 - None Hedged.xlsx  AuM Figures - 2024-12-06.xlsx  CFTRC - EUHYDEN - Historical Exposure by PrimaryIdentifier.xlsx  CLO Data Controls - Most current.xlsx  Capital Four Credit Opportunities exposure & performance - 2024-11-29 (2).xlsx  Credit Beta - CFTRC - 2024-11-29.xlsx  EUHYDEN Presentation 2024-10-31 - 2024-11-29 EUR Hedged.xlsx  Flash Report - 2024-12-09.xlsx  NAV Report - 2024-12-09.xlsx  NavStats Page - CFTRC - EUR - NET - 2024-11-29.xlsx  Overview Page - CFTRC - 2024-11-29.xlsx  Private Debt Capital Gain Page - CFPDV - 2024-11-29.xlsx  Risk Page - CFTRC - 2024-11-29.xlsx  Single Returns - CFTRC - 2024-11-29 - None Hedged.xlsx  Sustainability Linked Loan Page - CFPDV - 2024-11-29.xlsx  TDPSD Presentation 2023-12-29 - 2024-11-29 .xlsx  Trading Page - CFTRC - 2024-12-09.xlsx  Zoho Pipeline Data - 2024-12-09.xlsx
utils/: FileManagement.py  report_compiler.py
(+158 files in other folders)
